# ImpostorModmenu

./: .gitignore  CHANGELOG.MD  CONTRIBUTING.md  README.md  Rules.md  Rules.txt  SECURITY.md  inject-apk.sh
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: func.h  logger.h  main.cpp  mods.h  utils.h
app/src/main/cpp/And64InlineHook/: And64InlineHook.cpp  And64InlineHook.hpp
app/src/main/cpp/Substrate/: Buffer.hpp  CydiaSubstrate.h  SubstrateARM.hpp  SubstrateDebug.cpp  SubstrateDebug.hpp  SubstrateHook.cpp  SubstrateHook.h  SubstrateLog.hpp  SubstratePosixMemory.cpp  SubstrateX86.hpp  hde64.c  hde64.h
app/src/main/java/com/devilx86/modmenu/: MainActivity.java  MenuMain.java  MenuService.java
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
